<resources>
    <string name="app_name">Hitung Kebutuhan Kalori Dan Protein Kita</string>
    <string name="bmi_intro">Ayo hitung kebutuhan kalori dalam sehari kalian dan juga hitung berat badan ideal kalian yaa!!</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="bmr_x">Kalori yang Anda Butuhkan dalam sehari \n: %1$.2f Kkal</string>
    <string name="protein_x">Dan Protein yang dibutuhkan\n: %1$.0f Gram </string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="Umur_invalid">Umur tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="berat_badan">Berat badan (kg)</string>
    <string name="Umur">Umur(th)</string>
    <string name="tinggi_badan">Tinggi badan (cm)</string>
    <string name="judul_kurus">Mengatasi Kekurusan</string>
    <string name="judul_ideal">Menjaga Tetap Ideal</string>
    <string name="judul_gemuk">Mengatasi Kegemukan</string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger
berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan
gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh,
asal tidak lari dari kehidupan.</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Hitung BMI BMR merupakan sebuah aplikasi Android untuk
menghitung body mass index (BMI) dan juga Basal Metabolic Rate (BMR) sehingga seseorang dapat mengetahui apakah
berat badannya ideal, gemuk atau kurus. dan bisa mengetahui berapa sih kalori yang di butuhkan dia dalam sehari </string>
    ...
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s
cm\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
    <string name="saran_bmr"> Makanlah makanan seimbang, bergizi, dan variatif untuk menjaga keseimbangan nutrisi dalam tubuhmu.
Lakukan aktivitas fisik secara teratur untuk menjaga kebugaran dan kekuatan tubuhmu.
Istirahat yang cukup, karena tidur yang berkualitas adalah kunci untuk memulihkan dan mengisi kembali energi.
Jaga kebersihan dengan rajin mencuci tangan dan menjaga lingkungan sekitarmu agar bebas dari kuman dan penyakit.</string>
    <string name="saran_bmr1">"Jaga kesehatanmu, wujudkan hidup sehat dengan prinsip 4 Sehat 5 Sempurna!"\n
    "Jangan lupa untuk selalu menjaga kesehatanmu ya!"</string>
    <string name="bagikan_templatebmr">Berat badan: %1$s kg\nTinggi badan: %2$s
cm\n Umur : %2$s\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">BMI: %1$.2f - %2$s</string>
    <string name="hasil_x1">BMR: %1$.2f Kkal</string>
    <string name="hasil_xz">Protein: %1$.2f gram</string>
    <string name="data_x">BB: %1$.1f - TB: %2$.1f - %3$s</string>
    <string name="data_x1">BB: %1$.1f - TB: %2$.1f \n Umur: %2$.1f </string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Ada Buah baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>


</resources>