<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#617A55"
    android:layout_height="match_parent"
    tools:context="org.d3if3127.assesement02.MainActivity2">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/bmi_intro"
        android:textColor="#FFF8D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:textColor="#FFF8D6"
      android:id="@+id/beratBadan_hint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      tools:layout_editor_absoluteX="0dp">

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="#FFF8D6"
        android:id="@+id/beratBadan_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/berat_badan" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:textColor="#FFF8D6"
      android:id="@+id/tinggiBadan_hint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/Umur_hint"
      tools:layout_editor_absoluteX="0dp">

    <com.google.android.material.textfield.TextInputEditText

        android:textColor="#FFF8D6"
        android:id="@+id/tinggiBadan_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tinggi_badan" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:textColor="#FFF8D6"
      android:id="@+id/Umur_hint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/beratBadan_hint">

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="#FFF8D6"
        android:id="@+id/Umur_inp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/Umur"
        android:imeOptions="actionDone"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:textColor="#FFF8D6"
      android:id="@+id/textViewJK"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/jenis_kelamin"
      app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/radioGroup"
      app:layout_constraintVertical_bias="0.0" />

  <RadioGroup
      android:textColor="#FFF8D6"
      android:id="@+id/radioGroup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="16dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textViewJK"
      app:layout_constraintTop_toBottomOf="@id/tinggiBadan_hint">

    <RadioButton
        android:textColor="#FFF8D6"
        android:id="@+id/priaRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/pria" />

    <RadioButton
        android:textColor="#FFF8D6"
        android:id="@+id/wanitaRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/wanita" />
  </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/actor"
        android:imeOptions="actionDone"
        android:text="@string/hitung"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

  <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:textColor="#FFF8D6"
        android:id="@+id/bmrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/proteinTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="BMR: " />

    <TextView
        android:textColor="#FFF8D6"
        android:id="@+id/proteinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmrTextView"
        tools:text="Protein: " />

    <Button
      android:id="@+id/RESET"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:text="RESET"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.465"
      app:layout_constraintStart_toEndOf="@+id/button"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

